--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/cli": "^1.0.0-beta.17",
+    "@capacitor/core": "^1.0.0-beta.17",
+    "@capacitor/ios": "^1.0.0-beta.17",
     "@ionic/core": "^4.0.1",
     "@ionic/react": "^0.0.4",
     "@types/jest": "24.0.6",
