--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -2,5 +2,5 @@
   "appId": "com.example.app",
   "appName": "ionic-react-app",
   "bundledWebRuntime": false,
-  "webDir": "www"
+  "webDir": "build"
 }
