--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "init-cap": "npx cap init",
+    "sync-ios": "npm run build; npx cap sync ios",
+    "open-ios": "npx cap open ios"
   },
   "eslintConfig": {
     "extends": "react-app"
